--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -18,14 +18,14 @@ jobs:
       id: ahorcado-tests
       uses: education/autograding-command-grader@v1
       with:
-        test-name: Ahorcado tests
+        test-name: "Ahorcado tests"
         setup-command: sudo -H pip3 install pytest
         command: pytest
         timeout: 10
         max-score: 100
     - name: Autograding Reporter
       uses: education/autograding-grading-reporter@v1
+      with:
+        runners: "ahorcado-tests"  # Asegúrate de usar comillas aquí.
       env:
         AHORCADO-TEST_RESULTS: "${{steps.ahorcado-tests.outputs.result}}"
-      with:
-        runners: "ahorcado-tests"
