--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -26,6 +26,6 @@ jobs:
     - name: Autograding Reporter
       uses: education/autograding-grading-reporter@v1
       with:
-        runners: "ahorcado-tests"  # Asegúrate de usar comillas aquí.
+        runners: ["ahorcado-tests"]  # Cambia esto a lista
       env:
         AHORCADO-TEST_RESULTS: "${{steps.ahorcado-tests.outputs.result}}"
