--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -28,4 +28,4 @@ jobs:
         env:
           AHORCADO_TEST_RESULTS: "${{ steps.ahorcado-tests.outputs.result }}"
         with:
-          runners: ahorcado-tests  # Aquí como una única cadena
+          runners: "ahorcado-tests"  # Aquí en formato de cadena
